...
    <string name="contacts_read_subtext">This permission is required in order to read contacts.</string>
    <string name="contacts_subtext">This permission is required in order to add new contacts.</string>
    <string name="crash">Oops!\nBaldPhone ran into a problem and will now restart.</string>
    <string name="current_time">Current Time</string>
    <string name="custom">Custom</string>
    <string name="dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="delete___">Delete %s?</string>
    <string name="delete_all_alarms">Delete all alarms</string>
    <string name="dialer">Dialer</string>
    <string name="display_settings">Display</string>
    <string name="done">Done</string>
    <string name="down">Down</string>
    <string name="edit">Edit</string>
    <string name="email">Email:</string>
    <string name="enable_notification_access">Enable Notification Access</string>
    <string name="enable_notification_access_subtext">Please give BaldPhone access to notifications.</string>
    <string name="enter">Enter</string>
    <string name="enter_contact_or_phone_number">Enter contact name:</string>
...
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="missed">Missed</string>

    <string name="mobile_phone_number">Mobile phone number</string>
    <string name="monday">Monday</string>
    <string name="more">more</string>
    <string name="morning">Morning</string>
    <string name="name">Name</string>
    <string name="named__">named</string>
    <string name="new_alarm___was_created">new alarm %s was created!</string>
    <string name="nfc">NFC</string>
    <string name="no">No</string>
...
    <string name="to___minuets_from_now">to %d minutes from now</string>
    <string name="today">Today</string>
    <string name="took">Took!</string>
    <string name="tuesday">Tuesday</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_subtext">Are you sure you want to uninstall %s?\n%s\'s data will be gone forever!</string>
    <string name="up">Up</string>
    <string name="video">Video</string>
    <string name="video_tutorials">Video Tutorials</string>
    <string name="videos">Videos</string>

    <string name="voice_mail">Voice Mail</string>
    <string name="wednesday">Wednesday</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="wifi">Wifi</string>
    <string name="will_repeat_only_once">will repeat only once!</string>
    <string name="write">Write</string>
    <string name="write_contacts">Write Contacts</string>
    <string name="write_external_storage">Write external storage</string>
    <string name="yes">Yes</string>
    <string name="yesterday">Yesterday</string>
    <string name="nothing">Nothing</string>
    <string name="no_contacts_found">No Contacts Found!</string>
    <string name="no_alarms">No Alarms\nCreate one by clicking\n\"Add Alarm\"\nOr\n\"Add Timer\"</string>
    <string name="no_pills">No Pills\nCreate one by clicking\n\"Add Pill\"</string>
    <string name="clear_all_notifications">Clear All Notifications</string>
...
