...

    <com.bald.uriah.baldphone.views.ScrollingHelper
        android:id="@+id/scrolling_helper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:empty_text="@string/no_alarms"
        app:layout_constraintBottom_toTopOf="@id/options_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bald_title_bar">

        <com.bald.uriah.baldphone.views.ModularRecyclerView
            android:id="@+id/child"
            style="@style/ScrollStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/layout_animation_fall_down"

            >
...
