<!--
  ~ Copyright 2019 Uriah Shaul Mandel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<com.bald.uriah.baldphone.views.BaldImageButton xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/iv_close"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_gravity="end"
    android:layout_marginEnd="10dp"
    android:background="@drawable/style_for_buttons_transparent"
    app:srcCompat="@drawable/close_on_background" />