/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

package com.bald.uriah.baldphone.activities;

import android.content.Intent;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;
import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;
import com.bald.uriah.baldphone.R;
import com.bald.uriah.baldphone.activities.media.PhotosActivity;
import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.longClick;
import static androidx.test.espresso.matcher.ViewMatchers.*;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class PhotosActivityTest extends BaseActivityTest {

    @Rule
    public ActivityTestRule<PhotosActivity> mActivityTestRule = new ActivityTestRule<>(PhotosActivity.class, true, false);

    @Test
    public void photosActivityTest() {
        mActivityTestRule.launchActivity(new Intent());

        ViewInteraction appCompatImageView = onView(
                allOf(withContentDescription("Down"),
                        childAtPosition(
                                allOf(withId(R.id.container),
                                        childAtPosition(
                                                withClassName(is("com.bald.uriah.baldphone.views.ScrollingHelper")),
                                                2)),
                                1),
                        isDisplayed()));
        appCompatImageView.perform(click());

        ViewInteraction appCompatImageView2 = onView(
                allOf(withContentDescription("Up"),
                        childAtPosition(
                                allOf(withId(R.id.container),
                                        childAtPosition(
                                                withClassName(is("com.bald.uriah.baldphone.views.ScrollingHelper")),
                                                2)),
                                0),
                        isDisplayed()));
        appCompatImageView2.perform(click());

        ViewInteraction baldConstraintLayoutButton = onView(
                allOf(childAtPosition(
                        allOf(withId(R.id.child),
                                childAtPosition(
                                        withClassName(is("com.bald.uriah.baldphone.views.ScrollingHelper")),
                                        0)),
                        0),
                        isDisplayed()));
        baldConstraintLayoutButton.perform(longClick());

        ViewInteraction baldFrameLayoutButton = onView(
                allOf(withId(R.id.more),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.container),
                                        2),
                                1),
                        isDisplayed()));
        baldFrameLayoutButton.perform(longClick());

        ViewInteraction baldLinearLayoutButton = onView(
                allOf(withId(R.id.delete),
                        childAtPosition(
                                allOf(withId(R.id.options_bar),
                                        childAtPosition(
                                                withClassName(is("android.widget.FrameLayout")),
                                                0)),
                                1),
                        isDisplayed()));
        baldLinearLayoutButton.perform(longClick());

        ViewInteraction baldImageButton3 = onView(
                allOf(withId(R.id.iv_close),
                        childAtPosition(
                                allOf(withId(R.id.container),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                2),
                        isDisplayed()));
        baldImageButton3.perform(longClick());

        ViewInteraction baldLinearLayoutButton2 = onView(
                allOf(withId(R.id.delete),
                        childAtPosition(
                                allOf(withId(R.id.options_bar),
                                        childAtPosition(
                                                withClassName(is("android.widget.FrameLayout")),
                                                0)),
                                1),
                        isDisplayed()));
        baldLinearLayoutButton2.perform(longClick());

        ViewInteraction baldButton = onView(
                allOf(withId(R.id.dialog_box_true), withText("Yes"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.container),
                                        1),
                                0),
                        isDisplayed()));
        baldButton.perform(longClick());

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
